--- a/10MostVistedCities/dubaiUnitedArabEmirates.html
+++ b/10MostVistedCities/dubaiUnitedArabEmirates.html
@@ -11,4 +11,21 @@
     15,920,700 people vist in 2018. 16,328,300 people vist in 2019.  
     </p>
 </body>
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ol>
+</body>
 </html>
