--- a/10MostVistedCities/macauChina.html
+++ b/10MostVistedCities/macauChina.html
@@ -10,4 +10,21 @@
     <p>Macua is a city that is the fourth most visted in the world. 
         In 2018 the city had 18,551,200 vistors. In 2019 the city had 20,637,100 tourist vist. </p>
 </body>
+</body>
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ol>
 </html>
