--- a/10MostVistedCities/newYorkCityUnitedStates.html
+++ b/10MostVistedCities/newYorkCityUnitedStates.html
@@ -10,4 +10,21 @@
     <p> New York City, was the eight most visted city in the world in 2018 and 2019.
         13,600,000 people visted the city in 2018. 14,010,000 people visted the city in 2019. </p>
 </body>
+</body>
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ol>
 </html>
