--- a/10MostVistedCities/singapore.html
+++ b/10MostVistedCities/singapore.html
@@ -11,4 +11,21 @@
         In 2019 the city had 19,760,800 people vist. 
     </p>
 </body>
+</body>
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ol>
 </html>
