--- a/10MostVistedCities/istanbulTurkey.html
+++ b/10MostVistedCities/istanbulTurkey.html
@@ -13,4 +13,21 @@
 
     </p>
 </body>
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ol>
+</body>
 </html>
