--- a/10MostVistedCities/kualaLumpurMalaysia.html
+++ b/10MostVistedCities/kualaLumpurMalaysia.html
@@ -10,4 +10,21 @@
     <p> Kuala Lumpur is the ninth most visted city in thte world in 2018 and 2019.
         13,433,000 people visted the vist in 2018. 14,715,400 people visted the city in 2019. </p>
 </body>
+</body>
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ol>
 </html>
