--- a/10MostVistedCities/parisFrance.html
+++ b/10MostVistedCities/parisFrance.html
@@ -10,4 +10,21 @@
     <p> Paris the sixth most visted city in 2018 and 2019. The city had 17,560,200 people vist in 2018.
         The city had 19,087,900 people vist in 2019. </p>
 </body>
+</body>
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ol>
 </html>
