--- a/10MostVistedCities/dubaiUnitedArabEmirates.html
+++ b/10MostVistedCities/dubaiUnitedArabEmirates.html
@@ -11,10 +11,10 @@
     15,920,700 people vist in 2018. 16,328,300 people vist in 2019.  
     </p>
 </body>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.D1m1E5VmMk1w0DZp-O3csAFNC7%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.aJP3fjTFlCDBKWDqx9pySgHaEK%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.gvEQkZoAYqbXqmxoxxMP9AHaEo%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.Xj-J9CCzSWVYgw25rg7aNQHaEo%26pid%3DApi&f=1" alt="">
 <ol>
     <li></li>
     <li></li>
