--- a/10MostVistedCities/hongKongChina.html
+++ b/10MostVistedCities/hongKongChina.html
@@ -11,10 +11,10 @@
         29,262,700 people the city in 2018 26,716,800 people visted in 2019.
     </p>
 </body>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.0EH2Vx1UtsSQ71FJBjq6qgHaDt%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.K8vezoYduelLTQb7XIT7wAHaE8%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.BRu6hZzTDm4PhBIZANXaWQHaFN%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.12yVBluLzmxv1EfHXhy1pwHaEo%26pid%3DApi&f=1" alt="">
 <ol>
     <li></li>
     <li></li>
