--- a/10MostVistedCities/kualaLumpurMalaysia.html
+++ b/10MostVistedCities/kualaLumpurMalaysia.html
@@ -11,10 +11,10 @@
         13,433,000 people visted the vist in 2018. 14,715,400 people visted the city in 2019. </p>
 </body>
 </body>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.YGjnCx-hz2arBXF7nBAxMQHaEo%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.smQEY9b_st5FzaOrXlpL7gHaEt%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.nS3whXzU-uzx-hp3Tn7yUgHaEK%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.fSJnq1rUTG8MHY9jnsED7AHaE8%26pid%3DApi&f=1" alt="">
 <ol>
     <li></li>
     <li></li>
