--- a/10MostVistedCities/macauChina.html
+++ b/10MostVistedCities/macauChina.html
@@ -11,10 +11,10 @@
         In 2018 the city had 18,551,200 vistors. In 2019 the city had 20,637,100 tourist vist. </p>
 </body>
 </body>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.cb-tIRtMVm7QFjWO6JYojQHaCz%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.BCal53dV8q39XJerPdYSrAHaEK%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.KYibcnWUgmkAsvr8avBuPgHaEK%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.gZqalvnkgp0E8HhxVLm0nwHaE6%26pid%3DApi&f=1" alt="">
 <ol>
     <li></li>
     <li></li>
