--- a/10MostVistedCities/singapore.html
+++ b/10MostVistedCities/singapore.html
@@ -12,10 +12,10 @@
     </p>
 </body>
 </body>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.reiUBR_JdBNoP12d2_IB0gHaEo%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.GLJRbKNBieUsoqBsnDLoQgHaE7%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.P3gmlE460inyMNHmBh41NgHaEK%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.EpOE23tRYiRhmKz-0vOxywHaE7%26pid%3DApi&f=1" alt="">
 <ol>
     <li></li>
     <li></li>
