--- a/10MostVistedCities/newYorkCityUnitedStates.html
+++ b/10MostVistedCities/newYorkCityUnitedStates.html
@@ -11,10 +11,10 @@
         13,600,000 people visted the city in 2018. 14,010,000 people visted the city in 2019. </p>
 </body>
 </body>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.QD-WmD2Q0VdqRdD1WEPL7QHaEo%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.GsIbj2s5N2QpLDGeOP27NgHaEo%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.yDaIGRN4Pck4-tMm29MIsgHaE8%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.4YhVE-Xfy9R-m6jvPKKdMAHaEo%26pid%3DApi&f=1" alt="">
 <ol>
     <li></li>
     <li></li>
