--- a/10MostVistedCities/dubaiUnitedArabEmirates.html
+++ b/10MostVistedCities/dubaiUnitedArabEmirates.html
@@ -16,16 +16,16 @@
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.gvEQkZoAYqbXqmxoxxMP9AHaEo%26pid%3DApi&f=1" alt="">
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.Xj-J9CCzSWVYgw25rg7aNQHaEo%26pid%3DApi&f=1" alt="">
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>As of 2018, the population of Dubai had just surpassed 3 million. And only around 15% of this population are Emirati! Dubai is a magnet for nationalities from across the globe and foreigners make up the majority of the population.</li>
+    <li>Dubai is one of the 7 “Emirates” that come together to make the United Arab Emirates. It’s closest neighbor is Abu Dhabi, which is the capital Emirate and another popular tourist destination.</li>
+    <li>Each Emirate (Dubai, Abu Dhabi etc) has its own king, otherwise known as a Sheikh. </li>
+    <li>Arabic is the official language of Dubai, with English being spoken by many as well.</li>
+    <li>Dubai’s main airport is Dubai International Airport, which is the main hub airport of major airline Emirates. Visitors can enter Dubai through this main airport, or by flying into nearby Abu Dhabi or Sharjah and driving in.</li>
+    <li>Dubai’s food is delicious, and shawarma is the most popular local dish. It is much like a kebab or souvlaki, with meat, vegetables and dressings wrapped in pita bread.</li>
+    <li>Dubai is fast becoming one of the world’s most progressive cities. Its population is growing rapidly, as is its infrastructure. It’s now one of the most popular destinations in the world for a holiday.</li>
+    <li>The national animal of the entire United Arab Emirates is the Arabian oryx. What’s an Arabian oryx, you ask? It’s kind of like an mid-sized antelope.</li>
+    <li>Dubai was founded in 1833, but back then it was just a small fishing settlement. But it was only the 1980’s and 1990’s that saw it revolutionise itself as a world class tourist destination. In 30 years Dubai has gone from a sparse desert city with very little infrastructure to a multicultural and cosmopolitan destination people are flocking to.</li>
+    <li>On average, 14 million tourists a year visit Dubai.</li>
 </ol>
 </body>
 </html>
