--- a/10MostVistedCities/hongKongChina.html
+++ b/10MostVistedCities/hongKongChina.html
@@ -16,16 +16,16 @@
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.BRu6hZzTDm4PhBIZANXaWQHaFN%26pid%3DApi&f=1" alt="">
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.12yVBluLzmxv1EfHXhy1pwHaEo%26pid%3DApi&f=1" alt="">
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Hong Kong is among the richest cities in the world. It has more Rolls Royce per person than any other region in the globe.</li>
+    <li>Three quarters of the city’s landmass is rural. Major attractions in the rural areas include 24 parks, woodlands, reservoirs, hills and a beautiful coastline.</li>
+    <li>The name of the city is a Cantonese phrase that translates to fragrance harbo</li>
+    <li>Hong Kong is the home city to the founder of fiber optic communications: Professor Charles Kao.</li>
+    <li>The third Disney theme park outside the United States was opened in Hong Kong in the year 2005.</li>
+    <li>The city has the highest number of skyscrapers in the world. More than 7000 buildings in the region have over 14 floors (New York City has almost half of these.)</li>
+    <li>The British government managed to colonize Hong Kong in 1841 during the Opium War.</li>
+    <li>The region has the highest average intelligence quotient in the world at 107.</li>
+    <li>The city is known to have the largest fleet of ferries in the world transporting people and goods to Macau and various Chinese cities.</li>
+    <li>The city hosts the largest number of tourists per year with 2011 recording over 41.92 million visitors who spent more than $33.7 billion.</li>
 </ol>
 </body>
 </html>
