--- a/10MostVistedCities/istanbulTurkey.html
+++ b/10MostVistedCities/istanbulTurkey.html
@@ -20,16 +20,16 @@
 
 
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Istanbul is the only city in the world that straddles two continents: Asia and Europe.</li>
+    <li>Istanbul, while being the ancient capital of many empires, from Rome to the Ottoman era, it is not the modern capital of Turkey as Ankara is.</li>
+    <li>Istanbul, which used to be known as Constantinople thanks to the Roman Emperor Constantine the Great, is built on seven hills to match the seven hills of Rome.</li>
+    <li>Under the Ottoman Empire, the city was renowned for having more than 1,400 public toilets</li>
+    <li>While not the capital, Istanbul is Turkey’s largest city with more than 13 million people – 99 per cent of which are Muslim</li>
+    <li>Tulips, the symbol of Holland, originated in Istanbul and were sent from Istanbul to Netherlands.</li>
+    <li>The Grand Bazaar is the biggest old covered bazaar in the world, with over 3.000 shops.</li>
+    <li>British author Agatha Christie wrote her famous novel “Murder on the Orient Express” at Pera Palas Hotel in Istanbul.</li>
+    <li>Istanbul is surrounded by sea, with the Bosphorus cutting right through it. And yet, snow is common in the city, with the annual average being 18 inches.</li>
+    <li>Istanbul has the same population – 13 million and rising – as one of the smallest countries in Europe, Belgium</li>
 </ol>
 </body>
 </html>
