--- a/10MostVistedCities/kualaLumpurMalaysia.html
+++ b/10MostVistedCities/kualaLumpurMalaysia.html
@@ -16,15 +16,15 @@
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.nS3whXzU-uzx-hp3Tn7yUgHaEK%26pid%3DApi&f=1" alt="">
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.fSJnq1rUTG8MHY9jnsED7AHaE8%26pid%3DApi&f=1" alt="">
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>That’s what Kuala Lumpur literally means. In Malay, Kuala means “Muddy,” and Lumpur means a “junction between two rivers.” Kuala Lumpur is given the name because it is situated at the junction of Gombak River and Klang River.</li>
+    <li>Kuala Lumpur is the largest and most populated city in Malaysia with an estimated population of 1.8 million.</li>
+    <li>Although Kuala Lumpur is one of the fastest growing cities in the world, it only acquired the status of being a city in 1972.</li>
+    <li>The Malaysian Houses of Parliament is located at the Lake Gardens in Kuala Lumpur.</li>
+    <li>Kuala Lumpur is fondly called as KL and residents of the city are known as KLites.</li>
+    <li>Due to tropical rainforest climate, flash floods are a regular occurrence in Kuala Lumpur during the monsoon season, especially in the city center and other low-lying areas. So keep this in mind and check the weather conditions while making plans to visit the Kuala Lumpur.</li>
+    <li>Kuala Lumpur is home to the tallest twin buildings in the world – The Petronas Towers. They were the tallest buildings in the world from 1998 to 2004 until the opening of Taipei 101. Also, the double-decker bridge connecting the two towers on 41st and 42nd floors is the highest two-storey bridge in the world.</li>
+    <li>Yes, that’s correct! To meet the deadline, two different companies were hired to build the towers. The Japanese company, Hazama Corp built one of the towers while the other was built by the Korean company, Samsung. However, Hazama Corp made a mistake and discovered that the tower has a 25mm tilt. To correct the tilt, next 16 floors were slanted back 20mm. Interesting! Isn’t it?</li>
+    <li>Yes, the tallest twin towers in the world, Petronas Towers are created in just six years.</li>
+    <li>Kuala Lumpur Tower or KL Tower is the seventh tallest tower in the world and tallest telecommunication tower in Southeast Asia. It provides panoramic views of KL.</li>
 </ol>
 </html>
