--- a/10MostVistedCities/singapore.html
+++ b/10MostVistedCities/singapore.html
@@ -17,15 +17,15 @@
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.P3gmlE460inyMNHmBh41NgHaEK%26pid%3DApi&f=1" alt="">
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.EpOE23tRYiRhmKz-0vOxywHaE7%26pid%3DApi&f=1" alt="">
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>ingapore is conquering Asia sand by sand….literally. Singapore has been accused of buying too much sand from Malaysia, Cambodia and Vietnam. It led to several protests and blockades on sand trade after countries found chunks of their land being shipped off to Singapore.</li>
+    <li>Singapore is very passionate about toilets. The Singapore government tabled a UN resolution to designate 19th November as the World Toilet Day. It not only got the support of 122 other countries but the World Toilet Organization was formed on 19th November 2001, in Singapore.</li>
+    <li>ingapore can teach the world some lessons in honesty. The tiny city-state is the least corrupt in Asia and the 5th least corrupt country in the world.</li>
+    <li>In Singapore, parents teach their kids good manners while the government teaches the parents some. Singapore actually had a government-backed National Courtesy Campaign, since 1979, where Singaporeans were taught ethics and mannerisms. However, in 2001, it changed to the Singapore Kindness Movement.</li>
+    <li>Singapore has its national tree planting day on 7th November every year. Everyone from the Prime Minister to foreign diplomats to ordinary citizens’ plant trees on this day. Singaporeans even adopt and name trees for their children as birthday gifts or wedding presents.</li>
+    <li>But when Singapore plants trees, it plants them in style. The government opened up a series of manmade solar-powered trees, up to 50 meters high, in the ‘Gardens at the Bay’ project. It is now a cultural symbol and a tourist hotspot.</li>
+    <li>More than 80% of Singapore’s population lives in government-subsidized houses while the home ownership rate in Singapore is a staggering 92% (The highest in the world).</li>
+    <li>Usain Bolt may be the fastest sprinter in the world, but Singaporeans are collectively the fastest pedestrians on the planet.</li>
+    <li>In Singapore, stop chewing your gum if you see the police. Or simply don’t carry one. Currently, it is banned except without medical prescription.</li>
+    <li>Caning is actually still a legal form of punishment in Singapore. If you are caught vandalizing the tropical paradise, you won’t be able to sit properly for a few weeks.</li>
 </ol>
 </html>
