--- a/10MostVistedCities/parisFrance.html
+++ b/10MostVistedCities/parisFrance.html
@@ -11,20 +11,20 @@
         The city had 19,087,900 people vist in 2019. </p>
 </body>
 </body>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.yLDdQrZWAC8a-w_p11mtpQHaDr%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HviQvXytiARPFwzGs6KhtAHaFj%26pid%3DApi&f=1" alt="">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.WAauL9buL_DI_Emy-RjeNwHaEy%26pid%3DApi&f=1" alt="">
+<img src="https://www.parisdigest.com/photos/tour_eiffel_nuit.jpg" alt="">
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ol>7
+    <li>The Eiffel Tower was the world tallest building until 1930.</li>
+    <li>Sainte-Chapelle was built in 1246 as a shrine for Jesus' crown of thorns, hosted in Notre-Dame until the 2019 fire.</li>
+    <li>The world most famous picture, Mona Lisa, is hosted in the Louvre, the largest museum in the world.</li>
+    <li>French King Louis XVI was guillotined on Place de la Concorde in 1793, during the French revolution.</li>
+    <li>The famous Louis Vuitton megastore is located 101, avenue des Champs-Elysées, one of the most expensive avenues in the world.</li>
+    <li>Pablo Picasso, the famous Spanish painter, lived in Paris from 1900 to 1946, mostly in Montmartre and Montparnasse.</li>
+    <li>Jim Morrison, the lead vocalist of the rock band The Doors, died in Paris in 1971 and is buried in Père Lachaise cemetery.</li>
+    <li> Hélène de Pourtalès, born Helen Barbey in New York City, was the first woman ever to won a gold medal at the Olympics games (Paris Olympics Games 1900).</li>
+    <li>The 1946 universal declaration of human rights was signed in Palais de Chaillot during the UN third general assembly.</li>
+    <li>Emperor Napoléon was buried in Les Invalides in 1840. His tomb attracts 1.2 million visitors yearly, 70% international.</li>
+</ol>
 </html>
