--- a/10MostVistedCities/newYorkCityUnitedStates.html
+++ b/10MostVistedCities/newYorkCityUnitedStates.html
@@ -16,15 +16,15 @@
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.yDaIGRN4Pck4-tMm29MIsgHaE8%26pid%3DApi&f=1" alt="">
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.4YhVE-Xfy9R-m6jvPKKdMAHaEo%26pid%3DApi&f=1" alt="">
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>A little over 14 million people live in New York City. That means 1 in every 38 people in the United States call the city home</li>
+    <li>More than 800 languages are spoken in New York City, making it the most linguistically diverse city in the world. 4 in 10 households speak a language other than English.</li>
+    <li>Oysters were so popular in New York in the 19th century that the shells were used to pave Pearl Street. They were also used for lime for the masonry of the Trinity Church.</li>
+    <li>France gifted the Statue of Liberty to the United States in 1886 for its centennial celebration. The statue was shipped as 350 pieces in 214 crates and took 4 months to assemble at its current home on Ellis Island.</li>
+    <li>New York City’s Federal Reserve Bank has the largest gold storage in the world. The vault is 80 feet below street level and contains $90 billion in gold.</li>
+    <li>The New York Public Library has over 50 million books and other items and is the second largest library system in the nation after the Library of Congress. It is also the 3rd largest library in the world.</li>
+    <li>The United Nations headquarters was established in New York City in 1952 after World War II.</li>
+    <li>The first pizzeria in the United States opened in NYC in 1895. Since the 1960s, the price of a slice of pizza has been roughly the same price as a subway ride, generating the idea of “Pizza Principle” among economists.</li>
+    <li>The borough of Brooklyn alone would be the fourth largest city in the United States. Queens would also rank fourth nationally.</li>
+    <li>Times Square is named after the New York Times. It was originally called Longacre Square until the Times moved there in 1904.</li>
 </ol>
 </html>
