--- a/10MostVistedCities/macauChina.html
+++ b/10MostVistedCities/macauChina.html
@@ -16,15 +16,15 @@
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.KYibcnWUgmkAsvr8avBuPgHaEK%26pid%3DApi&f=1" alt="">
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.gZqalvnkgp0E8HhxVLm0nwHaE6%26pid%3DApi&f=1" alt="">
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>In addition to being Macau's largest natural beach, 4,000 year old ceramics were also excavated from the the Hac Sa Beach or Black Sandy Bay beach.</li>
+    <li>95 percent of the total population of Macau is Chinese.</li>
+    <li>It is the only place in China where gambling is allowed</li>
+    <li>The Cathedral of St. Paul, built by Jesuits around 1580-1625 AD formed Macau's 'acropolis' and was the largest Catholic church of its time in East Asia.</li>
+    <li>It has its own dialect of Portuguese called "Macanese Portuguese" and a distinctive creole generally known as "Patuá",</li>
+    <li>The Historic Centre of Macau inscribed as a UNESCO World Heritage site in 2005 is actually a collection of 25 historic monuments and public squares which bore witness to the assimilation and co-existence of Chinese and Portuguese cultures in Macau.</li>
+    <li>It has the world's highest population density with 20643.75 people per square kilometre in 2012.</li>
+    <li>50 percent of residents in Macau are Buddhists.</li>
+    <li>It was initially leased by Portuguese merchants in 1557 and functioned as a trading centre, shipping Asian gold, silk and spices back to Europe till the 18th century.</li>
+    <li>The Venetian Macao, owned by the Las Vegas Sands, is the largest casino in the world, the largest single structure hotel building in Asia and the sixth-largest building in the world by floor area.</li>
 </ol>
 </html>
