--- a/10MostVistedCities/londonUnitedKingdom.html
+++ b/10MostVistedCities/londonUnitedKingdom.html
@@ -17,15 +17,15 @@
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.vnPp4X0EDGjXpxV1uyA0cgHaEo%26pid%3DApi&f=1" alt="">
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.YIQNO02DNpIsHwi-Vj-JqgHaE7%26pid%3DApi&f=1" alt="">
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Romans first settled on the City of London in 47 CE.</li>
+    <li>As of 2018, London had a population of 8,961,989 people, making it the third most populous city in Europe.</li>
+    <li>London’s total gross value added (GVA) in 2018 was £487 billion ($624 billion).</li>
+    <li>Its population is notably diverse, together speaking more than 300 languages.</li>
+    <li>London has 33 local government districts: 32 boroughs and the City of London.</li>
+    <li>London is the capital city of England and the United Kingdom.</li>
+    <li>It is also the United Kingdom’s largest city.</li>
+    <li>London is one of the world’s most visited cities</li>
+    <li>The mayor of London and the London Assembly govern the city.</li>
+    <li>London sits in the southeastern region of England.</li>
 </ol>
 </html>
